--- a/Assignment2/assignment1 copy.html
+++ b/Assignment2/assignment1 copy.html
@@ -71,3 +71,5 @@ Programming concepts using a graphical, dataflow environment for media-based per
 <p>Create motion graphics with compositing, animation, and visual effects (VFX) for broadcast, web, virtual and augmented reality, with focus on community engagement.</p>
 
 <!-- THERE NEEDS TO BE A FASTER WAY OF DOING THIS SURELY, it's just copy and paste copy and paste...-->
+</body>
+</html>
