--- a/Assignment2/assignment1.html
+++ b/Assignment2/assignment1.html
@@ -42,4 +42,5 @@
 <h3>Sequence in Interdisciplinary Technologies</h3>
 
 <p>The Interdisciplinary Technologies sequence provides concentrated study in mobile, web and computer programming concepts, UI/UX, motion graphics, and interactivity along with a host of elective experiences across a range of creative/technical fields including sound, electronic music, music production, AR/VR/XR, and game design.</p>
-
+</body>
+</html>
