--- a/Final Portfolio/Frontpage.html
+++ b/Final Portfolio/Frontpage.html
@@ -11,7 +11,11 @@
     <div class="top-bubble"><li><a href="Gallerypage.html">Gallery </a></li></div>
  
 <Main>
-    <P> Hi! My name is John Romero Or you can refer to me as JAR if you want, it's a nickname, here's a bit about myself!</P>
+    <P> Hi! My name is John Romero, and here's a little bit about myself</P>
+
+    <P> I like to do stuff in different forms of digital media, such as character design, 3D modeling, Video Editing, Sound Design, Photograhy, and a couple more Im leaving out </P>
+
+    <P> You can Reach me at Johnromero813@gmail.com or Jromer9@ilstu.edu</P>
 </Main>
 
 <Aside>
