--- a/Final Portfolio/Gallerypage.html
+++ b/Final Portfolio/Gallerypage.html
@@ -11,7 +11,7 @@
     <div class="top-bubble"><li><a href="Gallerypage.html">Gallery </a></li></div>
 
 
-    <a class="burp" href="#character-design">
+    <a class="burp" href="Character Design.html">
       <img src="Bucket Head.png" alt="Character Design">
       <div class="Title">Character Design</div>
     </a>
